--- a/summary_report.Rmd
+++ b/summary_report.Rmd
@@ -2,12 +2,13 @@
 title: "Cyclistic"
 subtitle: "Analysis of difference in ridership patterns between casual and member customers"
 author: "Bryan Johns"
-date: "`r Sys.Date()`"
+date: "`r format(Sys.Date(), '%Y-%m')`"
 output:
   html_document:
     toc: true
     toc_depth: 2
     toc_float: true
+    css: ./resources/css/styles.css
 ---
 
 ```{r setup, include=FALSE}
@@ -34,7 +35,7 @@ This report follows the certificate's framework for data analysis: Ask, Prepare,
 
 See `./resources/Case Study 1_How does a bike-share navigate speedy success.pdf`. Quoted from the Google Data Analytics Capstone:
 
-> You are a junior data analyst working on the marketing analyst team at Cyclistic, a bike-share
+<blockquote>You are a junior data analyst working on the marketing analyst team at Cyclistic, a bike-share
 company in Chicago. The director of marketing believes the company’s future success
 depends on maximizing the number of annual memberships. Therefore, your team wants to
 understand how casual riders and annual members use Cyclistic bikes dierently. From these
@@ -42,67 +43,69 @@ insights, your team will design a new marketing strategy to convert casual rider
 members. But first, Cyclistic executives must approve your recommendations, so they must be
 backed up with compelling data insights and professional data visualizations.
 
-> Characters and teams
+Characters and teams
 
-> ● Cyclistic: A bike-share program that features more than 5,800 bicycles and 600
+● Cyclistic: A bike-share program that features more than 5,800 bicycles and 600
 docking stations. Cyclistic sets itself apart by also offering reclining bikes, hand
 tricycles, and cargo bikes, making bike-share more inclusive to people with disabilities
 and riders who can’t use a standard two-wheeled bike. The majority of riders opt for
 traditional bikes; about 8% of riders use the assistive options. Cyclistic users are more
 likely to ride for leisure, but about 30% use the bikes to commute to work each day.
 
-> ● Lily Moreno: The director of marketing and your manager. Moreno is responsible for
+● Lily Moreno: The director of marketing and your manager. Moreno is responsible for
 the development of campaigns and initiatives to promote the bike-share program.
 These may include email, social media, and other channels.
 
-> ● Cyclistic marketing analytics team: A team of data analysts who are responsible for
+● Cyclistic marketing analytics team: A team of data analysts who are responsible for
 collecting, analyzing, and reporting data that helps guide Cyclistic marketing strategy.
 You joined this team six months ago and have been busy learning about Cyclistic’s
 mission and business goals—as well as how you, as a junior data analyst, can help
 Cyclistic achieve them.
 
-> ● Cyclistic executive team: The notoriously detail-oriented executive team will decide
+● Cyclistic executive team: The notoriously detail-oriented executive team will decide
 whether to approve the recommended marketing program.
 
-> About the company
+About the company
 
-> In 2016, Cyclistic launched a successful bike-share offering. Since then, the program has grown
+In 2016, Cyclistic launched a successful bike-share offering. Since then, the program has grown
 to a fleet of 5,824 bicycles that are geotracked and locked into a network of 692 stations across
 Chicago. The bikes can be unlocked from one station and returned to any other station in the
 system anytime.
 
-> Until now, Cyclistic’s marketing strategy relied on building general awareness and appealing to
+Until now, Cyclistic’s marketing strategy relied on building general awareness and appealing to
 broad consumer segments. One approach that helped make these things possible was the
 flexibility of its pricing plans: single-ride passes, full-day passes, and annual memberships.
 Customers who purchase single-ride or full-day passes are referred to as casual riders.
 Customers who purchase annual memberships are Cyclistic members.
 
-> Cyclistic’s finance analysts have concluded that annual members are much more profitable
+Cyclistic’s finance analysts have concluded that annual members are much more profitable
 than casual riders. Although the pricing flexibility helps Cyclistic attract more customers,
 Moreno believes that maximizing the number of annual members will be key to future growth.
 Rather than creating a marketing campaign that targets all-new customers, Moreno believes
 there is a solid opportunity to convert casual riders into members. She notes that casual riders
 are already aware of the Cyclistic program and have chosen Cyclistic for their mobility needs.
 
-> Moreno has set a clear goal: Design marketing strategies aimed at converting casual riders into
+Moreno has set a clear goal: Design marketing strategies aimed at converting casual riders into
 annual members. In order to do that, however, the team needs to better understand how
 annual members and casual riders differ, why casual riders would buy a membership, and how
 digital media could affect their marketing tactics. Moreno and her team are interested in
 analyzing the Cyclistic historical bike trip data to identify trends.
 
-> Note that data-privacy issues prohibit you from using riders’ personally identifiable information.
+Note that data-privacy issues prohibit you from using riders’ personally identifiable information.
 This means that you won’t be able to connect pass purchases to credit card numbers to
 determine if casual riders live in the Cyclistic service area or if they have purchased multiple
 single passes.
 
-> Three questions will guide the future marketing program:
+Three questions will guide the future marketing program:
 
-> 1. How do annual members and casual riders use Cyclistic bikes differently?
-> 2. Why would casual riders buy Cyclistic annual memberships?
-> 3. How can Cyclistic use digital media to influence casual riders to become members?
+1. How do annual members and casual riders use Cyclistic bikes differently?
+2. Why would casual riders buy Cyclistic annual memberships?
+3. How can Cyclistic use digital media to influence casual riders to become members?
+<br><br>
 
-> Moreno has assigned you the first question to answer: How do annual members and casual
+Moreno has assigned you the first question to answer: How do annual members and casual
 riders use Cyclistic bikes differently?
+</blockquote>
 
 ## Ask
 
@@ -126,11 +129,11 @@ Deliverable: Documentation of any cleaning or manipulation of data
 
 Google again provided the [template](https://docs.google.com/document/d/1TzCqk59_J23D5zNCvwAPSgK-5osp-wVnifsc-VOpCaI/template/preview?usp=sharing) to clean the data (very helpful of them, making it rather easy to skip straight to analysis). See `data_cleaning_v1_2019q1_2020q1.R`.
 
-I slightly modified the script to clean individual quarters of Cyclistic data. Google's template covered only Q1 2019 and Q1 2020. I wanted to have 2019's Q2, Q3, and Q4 available.
+I slightly modified the script to clean individual quarters of Cyclistic data. Google's template covered only Q1 2019 and Q1 2020. I wanted to have 2019's Q2, Q3, and Q4 available. This briefly catastrophically halted data analysis, as ride length was calculated in minutes for 2019, and seconds in 2020.
 
 Data cleaning consisted of:
 
-● Removing some columns to match the 2019 and 2020 datasets (Trip duration, gender, and birth year from 2019, station latitude and longitude from 2020). Note: gender and birth year might be fruitful avenues of exploration for data analysis, and I could probably reconstruct and then map out every station from 2020's lat/long data.
+● Removing some columns to match the 2019 and 2020 datasets (Trip duration, gender, and birth year from 2019, station latitude and longitude from 2020).
 
 ● Consolidating the "member_casual" column from four labels to two ("member" and "casual"), instead of the original two names for members ("member" and "Subscriber") and two names for casual riders ("Customer" and "casual").
 
