feat: extract lat/long df in data_cleaning_v2

--- a/summary_report.Rmd
+++ b/summary_report.Rmd
@@ -127,7 +127,7 @@ Google provided the data, meaning Lyft and Divvy provided them with data from Ch
 
 Deliverable: Documentation of any cleaning or manipulation of data
 
-Google again provided the [template](https://docs.google.com/document/d/1TzCqk59_J23D5zNCvwAPSgK-5osp-wVnifsc-VOpCaI/template/preview?usp=sharing) to clean the data (very helpful of them, making it rather easy to skip straight to analysis). See `data_cleaning_v1_2019q1_2020q1.R`.
+Google provided a starter template to clean the data. See `data_cleaning_v1.R`.
 
 I slightly modified the script to clean individual quarters of Cyclistic data. Google's template covered only Q1 2019 and Q1 2020. I wanted to have 2019's Q2, Q3, and Q4 available. This briefly catastrophically halted data analysis, as ride length was calculated in minutes for 2019, and seconds in 2020.
 
