--- a/scratch_pad.Rmd
+++ b/scratch_pad.Rmd
@@ -265,6 +265,23 @@ df %>%
 ```
 
 ```{r}
+# aggregate member rider counts by hour and day of the week
+member_peak_times <- df %>%
+  mutate(day_of_week = factor(day_of_week, levels = c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"))) %>%  filter(member_casual == "member") %>%
+  group_by(day_of_week, hour) %>%
+  summarise(rides = n(), .groups = "drop")
+
+# heatmap of peak times for member riders
+ggplot(member_peak_times, aes(x = hour, y = day_of_week, fill = rides)) +
+  geom_tile() +
+  scale_fill_viridis_c() +
+  theme_minimal() +
+  labs(title = "Peak Usage Times for Member Riders", x = "Hour of Day", y = "Day of Week")
+```
+
+Members peak with commuter hours.
+
+```{r}
 # aggregate casual rider counts by hour and day of the week
 casual_peak_times <- df %>%
   mutate(day_of_week = factor(day_of_week, levels = c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"))) %>%  filter(member_casual == "casual") %>%
@@ -425,6 +442,47 @@ ggplot(casual_peak_stations, aes(x = reorder(start_station_name, n), y = n, fill
 ```
 
 ```{r}
+# map of top start stations for casual riders
+library(sf)
+library(ggspatial)
+
+# convert top casual start stations to sf object
+casual_start_sf <- casual_peak_stations %>%
+  left_join(df, by = c("start_station_name")) %>% # Join to get lat/lng
+  distinct(start_station_name, start_lat, start_lng) %>% # Remove duplicates
+  drop_na(start_lat, start_lng) %>% 
+  st_as_sf(coords = c("start_lng", "start_lat"), crs = 4326)
+
+# plot the map
+ggplot() +
+  annotation_map_tile(type = "osm", zoom = 12) +
+  geom_sf(data = casual_start_sf, color = "blue", size = 3, alpha = 0.7) +
+  labs(title = "Top Start Stations for Casual Riders (Map)",
+       x = "Longitude", y = "Latitude") +
+  theme_minimal()
+
+```
+
+```{r}
+# extract end stations for trips originating at top casual start stations
+casual_end_from_start_sf <- df %>%
+  filter(start_station_name %in% casual_peak_stations$start_station_name) %>%
+  distinct(start_station_name, end_station_name, end_lat, end_lng) %>%
+  drop_na(end_lat, end_lng) %>%
+  st_as_sf(coords = c("end_lng", "end_lat"), crs = 4326)
+
+# map end stations
+ggplot() +
+  annotation_map_tile(type = "osm", zoom = 12) +
+  geom_sf(data = casual_end_from_start_sf, color = "blue", size = 3, alpha = 0.7) +
+  labs(title = "End Stations for Trips from Top Start Stations (Casual Riders)",
+       x = "Longitude", y = "Latitude") +
+  theme_minimal()
+
+```
+
+
+```{r}
 # aggregate casual rider counts by station
 casual_peak_stations <- df %>%
   filter(member_casual == "casual") %>%
@@ -438,6 +496,145 @@ ggplot(casual_peak_stations, aes(x = reorder(end_station_name, n), y = n, fill =
   theme_minimal() +
   labs(title = "Top End Stations for Casual Riders", x = "Station Name", y = "Number of Rides")
 ```
+
+```{r}
+# Convert top casual end stations to sf object
+casual_end_sf <- casual_peak_stations %>%
+  left_join(df, by = c("end_station_name")) %>% 
+  distinct(end_station_name, end_lat, end_lng) %>% 
+  drop_na(end_lat, end_lng) %>% 
+  st_as_sf(coords = c("end_lng", "end_lat"), crs = 4326)
+
+# Plot map
+ggplot() +
+  annotation_map_tile(type = "osm", zoom = 12) +
+  geom_sf(data = casual_end_sf, color = "blue", size = 3, alpha = 0.7) +
+  labs(title = "Top End Stations for Casual Riders (Map)",
+       x = "Longitude", y = "Latitude") +
+  theme_minimal()
+
+```
+
+```{r}
+# extract start stations for trips ending at top casual end stations
+casual_start_from_end_sf <- df %>%
+  filter(end_station_name %in% casual_peak_stations$end_station_name) %>%
+  distinct(end_station_name, start_station_name, start_lat, start_lng) %>%
+  drop_na(start_lat, start_lng) %>%
+  st_as_sf(coords = c("start_lng", "start_lat"), crs = 4326)
+
+# map: start stations
+ggplot() +
+  annotation_map_tile(type = "osm", zoom = 12) +
+  geom_sf(data = casual_start_from_end_sf, color = "blue", size = 3, alpha = 0.7) +
+  labs(title = "Start Stations for Trips Ending at Top End Stations (Casual Riders)",
+       x = "Longitude", y = "Latitude") +
+  theme_minimal()
+
+```
+
+
+```{r}
+# aggregate member rider counts by station
+member_peak_stations <- df %>%
+  filter(member_casual == "member") %>%
+  count(start_station_name, sort = TRUE) %>%
+  top_n(10, n)
+
+# bar chart of top stations for member riders
+ggplot(member_peak_stations, aes(x = reorder(start_station_name, n), y = n, fill = start_station_name)) +
+  geom_col(show.legend = FALSE) +
+  coord_flip() +
+  theme_minimal() +
+  labs(title = "Top Start Stations for Member Riders", x = "Station Name", y = "Number of Rides")
+```
+
+```{r}
+# convert top member start stations to sf object
+member_start_sf <- member_peak_stations %>%
+  left_join(df, by = c("start_station_name")) %>% 
+  distinct(start_station_name, start_lat, start_lng) %>% 
+  drop_na(start_lat, start_lng) %>% 
+  st_as_sf(coords = c("start_lng", "start_lat"), crs = 4326)
+
+# plot map
+ggplot() +
+  annotation_map_tile(type = "osm", zoom = 12) +
+  geom_sf(data = member_start_sf, color = "red", size = 3, alpha = 0.7) +
+  labs(title = "Top Start Stations for Member Riders (Map)",
+       x = "Longitude", y = "Latitude") +
+  theme_minimal()
+
+```
+
+```{r}
+# extract end stations for trips starting at top member start stations
+member_end_sf <- df %>%
+  filter(start_station_name %in% member_peak_stations$start_station_name) %>%
+  distinct(start_station_name, end_station_name, end_lat, end_lng) %>%
+  drop_na(end_lat, end_lng) %>%
+  st_as_sf(coords = c("end_lng", "end_lat"), crs = 4326)
+
+# plot map
+ggplot() +
+  annotation_map_tile(type = "osm", zoom = 12) +
+  geom_sf(data = member_end_sf, color = "blue", size = 3, alpha = 0.7) +
+  labs(title = "End Stations for Trips from Top Start Stations",
+       x = "Longitude", y = "Latitude") +
+  theme_minimal()
+
+```
+
+```{r}
+# aggregate member rider counts by station
+member_peak_stations <- df %>%
+  filter(member_casual == "member") %>%
+  count(end_station_name, sort = TRUE) %>%
+  top_n(10, n)
+
+# bar chart of top stations for member riders
+ggplot(member_peak_stations, aes(x = reorder(end_station_name, n), y = n, fill = end_station_name)) +
+  geom_col(show.legend = FALSE) +
+  coord_flip() +
+  theme_minimal() +
+  labs(title = "Top End Stations for Member Riders", x = "Station Name", y = "Number of Rides")
+```
+
+```{r}
+# Convert top member end stations to sf object
+member_end_sf <- member_peak_stations %>%
+  left_join(df, by = c("end_station_name")) %>% 
+  distinct(end_station_name, end_lat, end_lng) %>% 
+  drop_na(end_lat, end_lng) %>% 
+  st_as_sf(coords = c("end_lng", "end_lat"), crs = 4326)
+
+# Plot map
+ggplot() +
+  annotation_map_tile(type = "osm", zoom = 12) +
+  geom_sf(data = member_end_sf, color = "red", size = 3, alpha = 0.7) +
+  labs(title = "Top End Stations for Member Riders (Map)",
+       x = "Longitude", y = "Latitude") +
+  theme_minimal()
+```
+
+```{r}
+# Extract start stations for trips ending at top member end stations
+member_start_sf <- df %>%
+  filter(end_station_name %in% member_peak_stations$end_station_name) %>%
+  distinct(end_station_name, start_station_name, start_lat, start_lng) %>%
+  drop_na(start_lat, start_lng) %>%
+  st_as_sf(coords = c("start_lng", "start_lat"), crs = 4326)
+
+# Plot map
+ggplot() +
+  annotation_map_tile(type = "osm", zoom = 12) +
+  geom_sf(data = member_start_sf, color = "blue", size = 3, alpha = 0.7) +
+  labs(title = "Start Stations for Trips Ending at Top End Stations",
+       x = "Longitude", y = "Latitude") +
+  theme_minimal()
+
+```
+
 
 ## Demographics
 
